Fix width overflow in standard template group item

--- a/styles/templates/_standard.scss
+++ b/styles/templates/_standard.scss
@@ -79,6 +79,8 @@ $standard-new-entity-stripe: white;
     flex: auto;
     display: flex;
     padding: 3px;
+    overflow: hidden;
+    text-overflow: ellipsis;
     background: #fafaf9;
   }
 
